Fixed an overflow issue with the right panel

--- a/src/styles.css
+++ b/src/styles.css
@@ -115,11 +115,11 @@ body {
 }
 
 h1, h2 {
-    margin: var(--padding-edges);
     color: var(--text-color);
 }
 
 h2 {
+    margin: var(--padding-edges);
     border-bottom: 2px solid var(--text-color);
 }
 
@@ -161,6 +161,7 @@ h2 {
 
 .rightPanel {
     flex: 0 0 80%;
+    flex-shrink: 1;
     background: var(--task-background);
     padding: 10px 30px;
 }
